RESOLVED FIXED107075
Fix crash when destroying a plug-in with pending URL requests
https://bugs.webkit.org/show_bug.cgi?id=107075
Summary Fix crash when destroying a plug-in with pending URL requests
Anders Carlsson
Reported 2013-01-16 17:55:16 PST
Fix crash when destroying a plug-in with pending URL requests
Attachments
Patch (1.99 KB, patch)
2013-01-16 17:56 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2013-01-16 17:56:55 PST
Anders Carlsson
Comment 2 2013-01-16 17:59:21 PST
Note You need to log in before you can comment on or make changes to this bug.