Fix crash when destroying a plug-in with pending URL requests https://bugs.webkit.org/show_bug.cgi?id=107075 <rdar://problem/12513871>

Reviewed by Sam Weinig.

In PluginView::destroyPluginAndReset, make sure to cancel any outstanding URL requests since the PluginView
object will stay around and would otherwise start loading URLs from stopped plug-ins.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::Stream::start):
Assert that the plug-in is alive.

(WebKit::PluginView::destroyPluginAndReset):
Empty out the pending URL requests vector and stop the timer.

git-svn-id: svn://svn.chromium.org/blink/trunk@139943 bbb929c8-8fbe-4397-9dbb-9b2b20218538